Testing redirection plugin

--- a/abnd.html
+++ b/abnd.html
@@ -2,5 +2,6 @@
 layout: page
 title: Android Basics Student Projects
 permalink: /abnd/
+redirect_to: https://www.google.com/
 ---
 {% include works-grid.html works=site.data.abnd %}
